--- a/app/src/main/res/layout/activity_add_question_screen.xml
+++ b/app/src/main/res/layout/activity_add_question_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tr.yildiz.edu.AddQuestionScreen">
+    tools:context="tr.yildiz.edu.sermedkerim.AddQuestionScreen">
 
     <EditText
         android:id="@+id/editTextQuestion"
