--- a/app/src/main/res/layout/activity_question_list.xml
+++ b/app/src/main/res/layout/activity_question_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tr.yildiz.edu.QuestionListActivity">
+    tools:context="tr.yildiz.edu.sermedkerim.QuestionListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
