--- a/app/src/main/res/layout/activity_quiz_settings.xml
+++ b/app/src/main/res/layout/activity_quiz_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tr.yildiz.edu.QuizSettings">
+    tools:context="tr.yildiz.edu.sermedkerim.QuizSettings">
 
     <TextView
         android:id="@+id/QuizTimeText"
