Soruya dosya ekleme özelliği eklendi

--- a/app/src/main/res/layout/quetion_item.xml
+++ b/app/src/main/res/layout/quetion_item.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="380dp"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="40px"
     android:layout_marginVertical="40px"
@@ -20,15 +20,15 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.065"
+        app:layout_constraintHorizontal_bias="0.003"
         app:layout_constraintStart_toEndOf="@+id/QuestionMark"
         app:layout_constraintTop_toBottomOf="@+id/Choice3Text"
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/QuestionMark"
-        android:layout_width="71dp"
-        android:layout_height="65dp"
+        android:layout_width="43dp"
+        android:layout_height="38dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,15 +37,14 @@
 
     <TextView
         android:id="@+id/questionText"
-        android:layout_width="286dp"
+        android:layout_width="200dp"
         android:layout_height="62dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="Question"
         android:textAlignment="viewStart"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/QuestionMark"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,22 +52,22 @@
         android:id="@+id/RecycleUpdateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="64dp"
         android:text="Update"
-        app:layout_constraintBottom_toTopOf="@+id/RecycleDeleteButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.868"
+        app:layout_constraintHorizontal_bias="0.965"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/RecycleDeleteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="12dp"
         android:text="Delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.86"
+        app:layout_constraintHorizontal_bias="0.955"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -80,7 +79,7 @@
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
+        app:layout_constraintHorizontal_bias="0.003"
         app:layout_constraintStart_toEndOf="@+id/QuestionMark"
         app:layout_constraintTop_toBottomOf="@+id/Choice2Text" />
 
@@ -88,7 +87,6 @@
         android:id="@+id/Choice1Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="A) Choice 1"
         android:textSize="12sp"
@@ -107,7 +105,7 @@
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
+        app:layout_constraintHorizontal_bias="0.003"
         app:layout_constraintStart_toEndOf="@+id/QuestionMark"
         app:layout_constraintTop_toBottomOf="@+id/Choice1Text" />
 
@@ -120,7 +118,7 @@
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.065"
+        app:layout_constraintHorizontal_bias="0.007"
         app:layout_constraintStart_toEndOf="@+id/QuestionMark"
         app:layout_constraintTop_toBottomOf="@+id/choice4Text" />
 
@@ -128,13 +126,40 @@
         android:id="@+id/RecyclerAnswerText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="152dp"
+        android:layout_marginBottom="12dp"
         android:text="Answer: Answer"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.698"
-        app:layout_constraintStart_toEndOf="@+id/choice4Text"
-        app:layout_constraintTop_toBottomOf="@+id/RecycleDeleteButton"
-        app:layout_constraintVertical_bias="0.517" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="270dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <VideoView
+            android:id="@+id/videoView2"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            tools:layout_editor_absoluteX="259dp"
+            tools:layout_editor_absoluteY="8dp" />
+    </FrameLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
