--- a/app/src/main/res/layout/activity_quiz_settings.xml
+++ b/app/src/main/res/layout/activity_quiz_settings.xml
@@ -7,6 +7,27 @@
     tools:context="tr.yildiz.edu.sermedkerim.QuizSettings">
 
     <TextView
+        android:id="@+id/timeProgressText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/seekBarTime"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.681"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.922" />
+
+    <SeekBar
+        android:id="@+id/seekBarTime"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="64dp"
+        app:layout_constraintBottom_toTopOf="@+id/seekBarScore"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.678"
+        app:layout_constraintStart_toEndOf="@+id/QuizTimeText" />
+
+    <TextView
         android:id="@+id/QuizTimeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,11 +42,13 @@
         android:id="@+id/QuestionScoreText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:text="Question Score"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/QuestionScoreEditText"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/DifficultyLevelText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/QuizTimeText" />
 
     <TextView
         android:id="@+id/DifficultyLevelText"
@@ -40,17 +63,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/QuizTimeText" />
 
-    <EditText
-        android:id="@+id/QuestionScoreEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="43dp"
-        android:layout_marginEnd="24dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/QuizTimeEditText" />
-
     <Button
         android:id="@+id/SetButton"
         android:layout_width="wrap_content"
@@ -61,26 +73,34 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/DifficultyLevelText" />
 
-    <EditText
-        android:id="@+id/QuizTimeEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="77dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="77dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintBottom_toBottomOf="@+id/QuestionScoreText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Spinner
         android:id="@+id/spinner3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginBottom="96dp"
+        app:layout_constraintBottom_toTopOf="@+id/SetButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toEndOf="@+id/DifficultyLevelText"
-        app:layout_constraintTop_toBottomOf="@+id/QuestionScoreEditText" />
+        app:layout_constraintStart_toEndOf="@+id/DifficultyLevelText" />
+
+    <SeekBar
+        android:id="@+id/seekBarScore"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="64dp"
+        app:layout_constraintBottom_toTopOf="@+id/spinner3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toEndOf="@+id/QuestionScoreText" />
+
+    <TextView
+        android:id="@+id/ScoreProgressText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/seekBarScore"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.681"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
