--- a/app/src/main/res/layout/quetion_item.xml
+++ b/app/src/main/res/layout/quetion_item.xml
@@ -143,6 +143,17 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
+    <TextView
+        android:id="@+id/textViewAttachmentUpdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="260dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -159,6 +170,7 @@
             android:layout_height="100dp"
             tools:layout_editor_absoluteX="259dp"
             tools:layout_editor_absoluteY="8dp" />
+
     </FrameLayout>
 
 
