Quiz .txt uzantılı dosya olarak kaydedildi

--- a/app/src/main/res/menu/quiz_menu.xml
+++ b/app/src/main/res/menu/quiz_menu.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/action_share"
+        android:icon="@drawable/ic_baseline_share_24"
+        android:title="share"
+        app:showAsAction="ifRoom"/>
     <item android:id="@+id/list_questions_actionbar" android:title="List Questions" />
     <item android:id="@+id/quiz_settings_actionbar" android:title="Quiz Setting" />
     <item android:id="@+id/create_quiz_actionbar" android:title="Create Quiz" />
