--- a/app/src/main/res/layout/activity_add_question_screen.xml
+++ b/app/src/main/res/layout/activity_add_question_screen.xml
@@ -151,7 +151,7 @@
         android:id="@+id/DataSourceText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Attachment"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/AddFileButton"
